--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -39,6 +39,7 @@ jobs:
       - run: uname -a
   test:
     runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
     environment: prod
     needs: build
     env:
