--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -12,3 +12,10 @@ jobs:
         uses: actions/checkout@v4.1.2
       - name: step2
         run: ls -l
+      - name: Set up JDK 11
+        uses: actions/setup-java@v4.2.1
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+      - name: Build with Maven
+        run: mvn package
